# httpd

./: .cvsignore  .gdbinit  .gitignore  .travis.yml  ABOUT_APACHE  Announcement  Announcement.de  Announcement.ja  Apache-apr2.dsw  Apache.dsp  Apache.dsw  Apache.mak  ApacheCore.def  ApacheCore.dsp  ApacheCoreDll.dsp  BuildBin.dsp  CHANGES  CMakeLists.txt  HTTP_Features.tsv  INSTALL  InstallBin.dsp  KEYS  LAYOUT  LICENSE  Makefile  Makefile.in  Makefile.tmpl  Makefile.win  Makefile.win32  NOTICE  NWGNUmakefile  NWGNUtail.inc  README  README-FIPS  README-WIN.TXT  README-win32.txt  README.CHANGES  README.NT  README.cmake  README.configure  (+74 more)
.libs/: httpd
2.4.x/: Apache-apr2.dsw  Apache.dsw  BuildAll.dsp  CHANGES  CMakeLists.txt  InstallBin.dsp  LAYOUT  Makefile.in  Makefile.win  NOTICE  ROADMAP  STATUS  VERSIONING  config.layout  configure.in  httpd.dep  libhttpd.dsp  libhttpd.mak
2.4.x-mod_md/: .gdbinit  Apache-apr2.dsw  CHANGES  CMakeLists.txt  NOTICE  STATUS  config.layout  libhttpd.dsp  libhttpd.mak
APACHE_1_1b0a/: CHANGES
APACHE_1_2_0/: ABOUT_APACHE
APACHE_1_2_1/: CHANGES
APACHE_1_2_2/: KEYS
APACHE_1_2_X/: ABOUT_APACHE  README
APACHE_1_2b2/: LICENSE
APACHE_1_2b3/: README
APACHE_1_3_0/: KEYS
APACHE_1_3_1/: Announcement  INSTALL  Makefile.tmpl
cgi-bin/: footer  (+1 more)
modules/apreq/: Makefile  Makefile.am  NWGNUmakefile  apreq_module_apache2.h  apreq_private_apache2.h  filter.c  filter.lo  handle.c  handle.lo  mod_apreq.dsp  mod_apreq.la  modules.mk
modules/apreq/.libs/: mod_apreq.la  mod_apreq.lai
modules/http2/: .gitignore  AUTHORS  COPYING  ChangeLog  DISCUSS  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  NWGNUmakefile  NWGNUmod_http2  NWGNUproxyht2  README  README.h2  README.md  config.h  config.m4  config2.m4  configure.ac  h2.h  h2_alpn.c  h2_alt_svc.c  h2_alt_svc.h  h2_bucket_beam.c  h2_bucket_beam.h  h2_bucket_eoc.c  h2_bucket_eoc.h  h2_bucket_eos.c  h2_bucket_eos.h  h2_c1.c  h2_c1.h  h2_c1_io.c  h2_c1_io.h  h2_c2.c  h2_c2.h  h2_c2_filter.c  h2_c2_filter.h  h2_config.c  h2_config.h  (+82 more)
modules/http2/mod-h2.xcodeproj/: project.pbxproj
modules/http2/mod-h2.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
modules/http2/mod-h2.xcodeproj/project.xcworkspace/xcshareddata/: mod-h2.xccheckout
modules/http2/mod-h2.xcodeproj/xcuserdata/sei.xcuserdatad/xcschemes/: mod_h2 make.xcscheme  xcschememanagement.plist
modules/http2/mod_h2/: .gitignore  Makefile.am  h2_alpn.h  h2_config.c  h2_config.h  h2_conn.c  h2_conn.h  h2_conn_io.c  h2_conn_io.h  h2_ctx.c  h2_from_h1.c  h2_h2.c  h2_h2.h  h2_io.c  h2_io.h  h2_io_set.c  h2_mplx.c  h2_mplx.h  h2_private.h  h2_request.h  h2_response.c  h2_response.h  h2_session.c  h2_stream.c  h2_stream.h  h2_stream_set.c  h2_task.c  h2_task.h  h2_task_input.c  h2_task_output.h  h2_util.c  h2_util.h  h2_version.h.in  h2_workers.c  h2_workers.h  mod_h2.c
modules/http2/mod_h2/m4/: h2.m4
modules/http2/sandbox/: .gitignore  Makefile.am
modules/http2/sandbox/httpd/: Makefile  get-openssl-latest.sh
modules/http2/sandbox/httpd/mod_ssl-alpn/: Makefile  README.dsov.ps  mod_ssl.c  mod_ssl.dsp  mod_ssl.h  modules.mk  ssl_engine_config.c  ssl_engine_init.c  ssl_engine_io.c  ssl_engine_kernel.c  ssl_engine_pphrase.c  ssl_engine_rand.c  ssl_private.h  ssl_util_ssl.c  ssl_util_stapling.c
modules/http2/sandbox/httpd/patches/: httpd-2.4.12-alpn-v5.patch  httpd-2.4.x-alpn-v4.patch  httpd-alpn-v4-v5.patch  httpd-npn.unified.diff.patch  openssl-1.0.2-alpn.patch  sni_misdirect.patch
modules/http2/sandbox/nghttp2/: Makefile
modules/http2/sandbox/test/: Makefile  load-urls-1.txt  test_alt_host.sh  test_common.sh  test_curl_altsvc.sh  test_curl_get.sh  test_curl_post.sh  test_nghttp_get.sh  test_nghttp_post.sh
modules/http2/sandbox/test/clients/: Makefile
modules/http2/sandbox/test/conf/: httpd.conf  modules.conf
modules/http2/sandbox/test/conf/mods-available/: mpm_event.load  mpm_prefork.load  mpm_worker.load
modules/http2/sandbox/test/conf/sites/: aaa-noh2.example.org.conf  test-ser.example.org.conf  test.example.org.conf
modules/http2/sandbox/test/conf/ssl/: extensions.conf  mod-h2.greenbytes.de.pem  noh2.example.org.x509.input  test-ser.example.org.x509.input  test.example.org.x509.input
modules/http2/sandbox/test/htdocs/test.example.org/: 001.html  003.html  004.html  hello.py  index.html  necho.py  upload.py
modules/http2/sandbox/test/htdocs/test.example.org/007/: 007.py
modules/http2/setup/: Makefile.am  h2.conf  h2.load  install-config.sh
srclib/libapreq/: Makefile.am  Makefile.in  apreq2-config.in  build.conf  buildconf  config.layout  configure.in  cookie.c  export_vars.sh.in
srclib/libapreq/include/: apreq.h  apreq_cookie.h  apreq_error.h  apreq_version.h
srclib/libapreq/t/: Makefile.am  at.c  at.h  cookie.c  error.c  params.c  parsers.c  util.c  version.c
srclib/pcre/: .cvsignore  ChangeLog  Makefile.in  NWGNUmakefile  config.hw  config.in  configure.in  dftables.c  dftables.dep  dftables.dsp  dftables.mak  internal.h  mkinstalldirs  pcre.c  pcre.dep  pcre.dsp  pcre.hw  pcre.in  pcre.mak  pcreposix.c  pcreposix.dsp  pcreposix.h  pcreposix.mak  printint.c
srclib/pcre/doc/: README_httpd  pcre.3  pcre_compile.3  pcre_config.3  pcre_copy_named_substring.3  pcre_copy_substring.3  pcre_exec.3  pcre_free_substring.3  pcre_free_substring_list.3  pcre_fullinfo.3  pcre_get_named_substring.3  pcre_get_stringnumber.3  pcre_get_substring.3  pcre_get_substring_list.3  pcre_info.3  pcre_maketables.3  pcre_study.3  pcre_version.3  pcreapi.3  pcrebuild.3  pcrecallout.3  pcrecompat.3  pcregrep.1  pcregrep.txt  pcrepartial.3  pcrepattern.3  pcreperform.3  pcreposix.3  pcreprecompile.3  pcresample.3  pcretest.1  pcretest.txt  perltest.txt
srclib/pcre/doc/html/: index.html  pcre.html  pcre_compile.html  pcre_exec.html  pcreapi.html  pcrebuild.html  pcrecallout.html  pcrecompat.html  pcregrep.html  pcrepartial.html  pcrepattern.html  pcreperform.html  pcreposix.html  pcreprecompile.html  pcretest.html
srclib/pcre/testdata/: testinput1  testinput2  testoutput1  testoutput2  testoutput3  testoutput4  testoutput5
(+17180 files in other folders)
